--- a/Week7/WorkShopWeek7/index.html
+++ b/Week7/WorkShopWeek7/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-<div class="container-fluid" id="display" style="padding-top: 20px;"></div>
+<div class="container-fluid" id="display"></div>
 <script>
     let xttp = new XMLHttpRequest();
     xttp.open("GET","http://localhost:3000/book",true);
