--- a/Week9/index.html
+++ b/Week9/index.html
@@ -79,7 +79,7 @@ body{
    
 function next(){
   i++;
-  if (i == obj.length) {
+  if (i == obj.length-1) {
     document.getElementById('nxtbtn').disabled = true;
   }
   document.getElementById('prvbtn').disabled = false;
