--- a/Week10/index.html
+++ b/Week10/index.html
@@ -38,8 +38,8 @@ body .intro-lead-in {
 <center><div class="container">
   <br>
   <div class="btn-group" role="group" style="text-align: center;border-color: var(--bs-border-color-translucent);">
-  <button class="btn btn-primary" id="prvbtn" type="button" onclick="prv()" style="background: var(--bs-red);border-style: none;border-color: var(--bs-blue);">ก่อนหน้า</button>
-  <button class="btn btn-primary"  id="nxtbtn" type="button" onclick="next()" style="background: var(--bs-danger);border-style: none;">ถัดไป</button></div>
+  <button class="btn btn-primary" id="prvbtn" type="button" onclick="prv()" style="background: var(--bs-primary);border-style: none;border-color: var(--bs-blue);">ก่อนหน้า</button>
+  <button class="btn btn-primary"  id="nxtbtn" type="button" onclick="next()" style="background: var(--bs-primary);border-style: none;">ถัดไป</button></div>
 
 </div>
 </center>
@@ -60,19 +60,19 @@ body .intro-lead-in {
             <div class="intro-text">
                 <div class="intro-lead-in" id="text-review"><span style="padding:5px;" >`+obj[i].PostTitle+`</span></div>
                 <div class="row">
-                    <div class="col-xl-2" style="background: rgba(220,53,69,0.42);">
+                    <div class="col-xl-2" style="background: #fed136;">
                         <p><i class="fi fi-sr-calendar-clock"></i>&emsp;`+obj[i].PostDate+`</p>
                     </div>
-                    <div class="col" style="background: rgba(220,53,69,0.42);">
+                    <div class="col" style="background: #fed136;">
                         <p><i class="fi fi-sr-clock-three"></i>&emsp;`+obj[i].PostTime+`</p>
                     </div>
-                    <div class="col-xl-3" style="background: rgba(220,53,69,0.42);">
+                    <div class="col-xl-3" style="background: #fed136;">
                         <p><i class="fi fi-sr-folder"></i>&emsp;`+obj[i].PostCategory+`</p>
                     </div>
-                    <div class="col-xl-4" style="background: rgba(220,53,69,0.42);">
+                    <div class="col-xl-4" style="background: #fed136;">
                         <p><i class="fi fi-sr-tags"></i>&emsp;`+obj[i].PostTag+`</p>
                     </div>
-                    <div class="col" style="background: rgba(220,53,69,0.42);">
+                    <div class="col" style="background: #fed136;">
                         <p><i class="fi fi-ss-user"></i>&emsp;`+obj[i].PostAuthor+`</p>
                     </div>
                 </div>
