--- a/Week10/addpost.html
+++ b/Week10/addpost.html
@@ -83,7 +83,7 @@ label,span,h1,.form-control{
             </div>
             <center><div class="row" style="padding-top: 5px;">
                 <div class="col">
-                    <input class="btn btn-primary" onclick="addMovie()" type="button" value="AddMovie" data-tilt>
+                    <input class="btn btn-primary" onclick="addMovie()" type="button" value="Add Post" data-tilt>
                 </div>
             </div>
         </center>   
